--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO"/>
+    <!-- Android 12及以下 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- Android 13及以上 -->
+    <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +19,7 @@
         android:theme="@style/Theme.MusicPlayer_client"
         android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="false">
-        </activity>
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
@@ -39,11 +39,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.main.AlbumDetailActivity" android:exported="false"/>
-        <activity android:name=".ui.main.PlaylistDetailActivity" android:exported="false"/>
-        <activity android:name=".ui.main.PlayerActivity" android:exported="false"/>
-        <activity android:name=".ui.main.ActivityPlaceholder" android:exported="false"/>
-        <activity android:name=".ui.main.LocalMusicActivity" android:exported="false"/>
+
     </application>
 
 </manifest>
